<resources>
    <string name="app_name">KotlinMessenger</string>
    <string name="select_photo">Select Photo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="new_message">New Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="this_is_a_message">This is a message and it is a very long message that is received and read by you</string>
    <string name="username">Username</string>
</resources>
