<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.RegisterActivity">

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="#fff">

        <Button
            android:id="@+id/select_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:foregroundGravity="fill"
            android:text="@string/select_photo"
            android:background="@drawable/rounded_btn_circular"
            android:layout_centerVertical="true"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImage"
            android:layout_width="150dp"
            app:civ_border_width="2dp"
            android:layout_height="150dp"/>

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/relLayout"
        android:padding="20dp"
        app:cardCornerRadius="15dp"
        android:elevation="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_edittext"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_margin="10dp"
                android:hint="@string/enter_your_email"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/enter_your_name"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_below="@id/email"
                android:layout_margin="10dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/enter_your_password"
                android:background="@drawable/rounded_edittext"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_below="@id/name"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_margin="10dp"
                android:text="@string/register"
                android:textColor="#000"
                android:elevation="10dp"
                android:background="@drawable/rounded_btn"/>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_below="@id/reg"/>

</RelativeLayout>